update chatserver